Finishing problem model

--- a/documentation/master.tex
+++ b/documentation/master.tex
@@ -13,7 +13,7 @@
 % Draw all the remaining parts of the document
 
 \input{docs/dominio}
-% \input{docs/problemas}
+\input{docs/problemas}
 % \input{docs/modelos}
 % \input{docs/prueba}
 
