Finished model description

--- a/documentation/docs/dominio.tex
+++ b/documentation/docs/dominio.tex
@@ -45,10 +45,10 @@ Los predicados con los que contamos en el dominio son:
     Por ejemplo, \texttt{(consecutivo lunes martes)} indica que
     \texttt{martes} es consecutivo a \texttt{lunes}.
 
-  \item[\texttt{(último\_dia ?d - dia)}:]
+  \item[\texttt{(ultimo\_dia ?d - dia)}:]
 
     Expresa que el dia \texttt{d} es el último dia de la semana.
-    Por ejemplo, \texttt{(último\_dia viernes)} indica que
+    Por ejemplo, \texttt{(ultimo\_dia viernes)} indica que
     \texttt{viernes} es el último dia de la semana.
 
   \item[\texttt{(es\_de\_tipo ?p - plato ?t - tipo\_plato)}:]
@@ -119,7 +119,7 @@ Los predicados con los que contamos en el dominio son:
 
 \begin{description}
 
-  \item[\texttt{servir\_último\_dia\_primero}:]
+  \item[\texttt{servir\_ultimo\_dia\_primero}:]
 
     De manera resumida, esta accion
     sirve el primer plato del último dia de la semana.
@@ -137,7 +137,7 @@ Los predicados con los que contamos en el dominio son:
         del plato a servir
     \end{itemize}
 
-  \item[\texttt{servir\_último\_dia\_segundo}:]
+  \item[\texttt{servir\_ultimo\_dia\_segundo}:]
 
     De manera resumida, esta accion
     sirve el segundo plato del último dia de la semana.
