--- a/documentation/master.tex
+++ b/documentation/master.tex
@@ -14,7 +14,7 @@
 
 \input{docs/dominio}
 \input{docs/problemas}
-% \input{docs/modelos}
-% \input{docs/prueba}
+\input{docs/modelos}
+\input{docs/prueba}
 
 \end{document}
